# WeDuckPortable

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
src/: client.rs  config.rs  main.rs  shell.rs
