[package]
name = "wqy-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json", "blocking", "gzip"] }
rumqttc = "0.23.0"
serde = { version = "1.0.192", features = ["derive", "serde_derive"] }
tokio = { version = "1.33.0", features = ["signal"] }
